SpringBoot+vue练手项目，目前处于正在学习阶段，现阶段完成登录注册等功能，等待下一步开发。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.travels.entity
 
 loggin.level.root=info
-logging.level.dao=debug
+logging.level.com.example.travels.dao=debug
